--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact us</a>
+                    <a class="nav-link" href="#contactUs">Contact us</a>
                   </li>
                 </ul>
               </div>
@@ -76,7 +76,7 @@
                     <div class="col-md-7">
                         <h1  class="price">Cool XBox</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, at ab? Quisquam rerum aspernatur similique </p>
-                        <h1>$920</h1>
+                        <h1 class="price">$920</h1>
                         <button class="btn btn-warning">Buy Now!</button>
 
                     </div>
@@ -97,6 +97,128 @@
           </div>
     </div>
 
+    <div class="container categories">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="cat1 d-flex justify-content-between align-items-center">
+                    <h1>Watch</h1>
+                    <img src="images/categories/watch.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cat2 d-flex justify-content-between align-items-center">
+                    <h1>Bag</h1>
+                    <img src="images/categories/bag.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cat3 d-flex justify-content-between align-items-center">
+                    <h1>Shoes</h1>
+                    <img src="images/categories/shoes.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container shoes" id="shoes">
+        <h3>Shoes</h3>
+
+        <div class="card-group">
+            <div class="card">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supply 360</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h3 class="price"> $220</h3>
+                <button class="btn btn-warning">Buy Now >></button>
+
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.below as a natural lead-in to additional content.</p>
+                <h3 class="price"> $320</h3>
+                <button class="btn btn-warning">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">This is a wider card with supporting as a natural lead-in to additional content. This card has even longer cont equal height action.</p>
+
+                <h3 class="price"> $520</h3>
+                <button class="btn btn-warning">Buy Now >></button>
+
+                <h3></h3>
+              </div>
+            </div> 
+          </div>
+    </div>
+
+
+    <div class="container backpack " id="backpack">
+        <h3>Backpack</h3>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Laltu Bag</h5>
+                  <h3 class="price"> $320</h3>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                    <button class="btn btn-warning">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Blue Nilltu Bag </h5>
+                  <h3 class="price"> $420</h3>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                    <button class="btn btn-warning">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-3.png"  class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Black Kaltu Bag</h5>
+                  <h3 class="price"> $520</h3>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional cont action.</p>
+                </div>
+                <div class="card-footer">
+                    <button class="btn btn-warning">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+
+    <div class="container d-flex justify-content-center align-items-center  orange-bg" id="contactUs">
+        <div>
+            <h3>LET'S STAY IN TOUCH</h3>
+            <h6>Get updates on sales and more</h6>
+            <input class="form-control" type="text">
+            <button class="btn btn-warning">SUBMIT</button>
+        </div>
+    </div>
+
+    <footer>
+        <small>
+            &copy; All Right Reserved By- Palash kumer
+        </small>
+    </footer>
 
 
 
